# backend-service-for-job--vacancy-analysis

./: .gitignore  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  tree.py
API_GATEWAY/: config.py  main.py  middleware.py  requirements.txt
Auth_service/: Dockerfile  config.py  database.py  main.py  security.py  user.sql  users_model.py  users_schema.py
backend/: depends.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 010f7014906e_create_typesactions_table.py  879094d7f064_initial_tables.py
backend/core/: config.py  create_base_app.py  database.py
backend/models/: trainings.py  users.py
backend/repositories/: actions_repository.py  levels_repository.py  tags_repository.py  trainings_repository.py  users_repository.py
backend/routing/: actions_router.py  auth_router.py  levels_router.py  tags_router.py  training_router.py
backend/schemas/: actions.py  levels.py  mail.py  tags.py  trainings.py
backend/scripts/: create_user.py
backend/services/: trainings_service.py  user_service.py
backend/services/collection/connectors/hh_connector/: hh_connector
backend/services/external_services/: mail_service.py  redis_service.py  s3_service.py
backend/services/processing/ai_enricher/models/: ai_models
backend/utils/: security.py
backend_archive/: .gitignore  alembic.ini  depends.py  docker-compose.yaml  dockerfile  main.py  pyproject.toml
backend_archive/alembic/: env.py
backend_archive/core/: config.py
backend_archive/models/: users.py
backend_archive/repositories/: actions_repository.py  base_repository.py
backend_archive/routing/: auth_router.py  base_router.py  levels_router.py
backend_archive/schemas/: users.py
backend_archive/services/: user_service.py
backend_archive/utils/: security.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/app/: main.js
frontend/assets/styles/: index.css
frontend/components/base_components/: index.js
frontend/composables/: useDnd.js
frontend/config/: colorSchema.js
frontend/pages/: index.js
frontend/pages/ui/: EditPage.vue  HelpPage.vue  HomePage.vue  LoginPage.vue  (+5 more)
frontend/providers/: index.js
frontend/router/: index.js  routes.js
frontend/store/: editTraining.js  userData.js
frontend/utils/: checkAuth.js
infra/: docker-compose.yaml
services/Auth_service/: database.py
services/Ml_processing_service/: Dockerfile
services/auth_service/: Dockerfile  auth_router.py  config.py  database.py  deps.py  main.py  repository.py  requirements.txt  security.py  user.sql  users_model.py
(+37 files in other folders)
