[project]
name = "backend"
version = "0.1.0"
description = "Разработка серверной части сервиса для анализа рынка труда на основе больших данных"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "boto3>=1.42.39",
    "crypto>=1.4.1",
    "fastapi>=0.128.0",
    "jose>=1.0.0",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pycryptodome>=3.23.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
